feat: :sparkles: Santiago's button changes

--- a/buyConfirmation.html
+++ b/buyConfirmation.html
@@ -196,7 +196,7 @@
             <h1>¡Compra Exitosa!</h1>
             <p>Gracias por tu compra. Hemos recibido tu pedido y lo estamos procesando.</p>
             <p>Te enviaremos un correo electrónico con los detalles de tu transacción.</p>
-            <a href="productos.html" class="boton">Volver a Productos</a>
+            <a href="index.html" class="boton">Volver a Productos</a>
         </section>
     </main>
 
